// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > renders correctly with props 1`] = `
<div
  aria-orientation="horizontal"
  class="accordion horizontal"
>
  
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <!--v-if-->
        <span>
          Subpane 1
        </span>
      </button>
    </header>
    <div
      class="pane"
      role="region"
      style="display: none;"
    >
      <div
        title="Subpane 1"
      >
        <p>
          Subpane 1 content
        </p>
      </div>
    </div>
  </section>
  <section
    data-expanded="true"
  >
    <header>
      <button
        aria-expanded="true"
        tabindex="0"
        type="button"
      >
        <!--v-if-->
        <span>
          Subpane 2
        </span>
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        title="Subpane 2"
      >
        <p>
          Subpane 2 content
        </p>
      </div>
    </div>
  </section>
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <!--v-if-->
        <span>
          Subpane 3
        </span>
      </button>
    </header>
    <div
      class="pane"
      role="region"
      style="display: none;"
    >
      <div
        title="Subpane 3"
      >
        <p>
          Subpane 3 content
        </p>
      </div>
    </div>
  </section>
  
</div>
`;

exports[`Accordion > renders correctly with slot 1`] = `
<div
  aria-orientation="vertical"
  class="accordion vertical"
>
  
  <section
    data-expanded="true"
  >
    <header>
      <button
        aria-expanded="true"
        tabindex="0"
        type="button"
      >
        <!--v-if-->
        <span>
          Subpane 1
        </span>
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        title="Subpane 1"
      >
        <p>
          Subpane 1 content
        </p>
      </div>
    </div>
  </section>
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <!--v-if-->
        <span>
          Subpane 2
        </span>
      </button>
    </header>
    <div
      class="pane"
      role="region"
      style="display: none;"
    >
      <div
        title="Subpane 2"
      >
        <p>
          Subpane 2 content
        </p>
      </div>
    </div>
  </section>
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <!--v-if-->
        <span>
          Subpane 3
        </span>
      </button>
    </header>
    <div
      class="pane"
      role="region"
      style="display: none;"
    >
      <div
        title="Subpane 3"
      >
        <p>
          Subpane 3 content
        </p>
      </div>
    </div>
  </section>
  
</div>
`;
